ChatCompletion: Adding /v1/metrics endpoint
- Adding /v1/metrics endpoint to provide wholesome metrics reporting
  on system resources during the service operation
- Additionally /v1/metrics is also available to query
  average of metrics like TTFT during a model's lifetime in server
